# triago_control

./: CMakeLists.txt  README.md  package.xml  triago_extracted.urdf
.kiro/: context.md
.kiro/steering/: frame_conventions.md
config/: Recording_Rviz.rviz  qp_debug.rviz  trajectory_endpoints.yaml
haption_teleoperation/: CMakeLists.txt  package.xml
haption_teleoperation/include/: VirtuoseAPI.h
haption_teleoperation/scripts/: haptic_force_manager.py  haption_plotter.py  teleop_demo_integrator.py  teleop_triago.py  teleop_triago_clutch.py  workspace_debug_visualizer.py
haption_teleoperation/src/: calibration_main.cpp  virtuose_server_node.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/triago_control/lib/triago_control/: drift_evaluator_node.py  keyboard_teleop.py  main_qp_controller.py  main_shared_autonomy.py  trajectory_generator.py  visualize_live_shadow.py
install/triago_control/local/lib/python3.10/dist-packages/triago_control-0.0.1-py3.10.egg-info/: PKG-INFO
install/triago_control/local/lib/python3.10/dist-packages/triago_control/qp_controller/: collision_manager.py  qp_visualizer_tutorial.py
install/triago_control/local/lib/python3.10/dist-packages/triago_control/shared_autonomy/: belief_estimator.py
install/triago_control/share/ament_index/resource_index/parent_prefix_path/: triago_control
install/triago_control/share/triago_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/triago_control/share/triago_control/config/: Recording_Rviz.rviz
install/triago_control/share/triago_control/launch/: visualize.launch.py
log/: latest_build
scripts/: workspace_mapper.py
scripts/head_controller/: head_plotter.py  main_head.py  qp_head_visual_servo.py
scripts/qp_arm_teleop/: base_controller.py  main_qp_controller.py  main_shared_autonomy.py  plotter.py  sa_coupling_debugger.py  trajectory_generator.py
triago_control/: qp_visualizer.py
triago_control/head_control/: camera_interface.py  config.py  head_kinematics.py  look_at_controller.py  object_detector.py  object_tracker.py  perception_pipeline.py  table_segmenter.py  visualization.py  voxel_map.py
triago_control/qp_controller/: collision_manager.py  config.py  qp_formulator.py  qp_visualizer_tutorial.py  robot_kinematics.py  shared_autonomy_handler.py  visualization_engine.py
triago_control/shared_autonomy/: belief_estimator.py  goal_set.py  grasp_state_machine.py  plot_manager.py
